--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   ffmpegthumbs-14.12.2.tar.xz: 8342c64e4be578c9194d44843a9e89feaaeaaedd
+  ffmpegthumbs-15.03.97.tar.xz: 13187236e94c0f93f5ddc249ae04b4d643d72ec6
