--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  ffmpegthumbs-24.01.95.tar.xz: 4654f9017f1524db1c962fa1723020d2f86c814d
+  ffmpegthumbs-20240217.tar.bz2: bd05c1f0d312d84f2f9740296e16decdc5ad02fb
