--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   ffmpegthumbs-20240217.tar.bz2: bd05c1f0d312d84f2f9740296e16decdc5ad02fb
+  ffmpegthumbs-24.02.0.tar.xz: d2da16ed7d2a7cc0d7d543a0cb57a78059c79ca6
